<resources>
    <string name="app_name">YourStoryMyApp</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="login_success">Logged in</string>
    <string name="login_fail">Log in failed</string>
    <string name="welcome">Welcome to YourStory MyApp!</string>
    <string name="welcome_messages">Create and share your story now!</string>
    <string name="its_free">No need to worry, it is completely free!</string>
    <string name="field_can_not_be_empty">This field can not be empty</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="have_not_account">Do not have an account?</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="name">Name</string>
    <string name="description">Want to say something?</string>
    <string name="image">Image</string>
    <string name="latitude">Latitude</string>
    <string name="location">Location : </string>
    <string name="separator">,</string>
    <string name="longitude">Longitude</string>
    <string name="retry">Retry</string>
    <string name="add_story">Add story</string>
    <string name="log_out">Log out</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="please_wait">Please wait…</string>
    <string name="picture_take_failed">Failed to take picture</string>
    <string name="fail_open_camera">Failed to open camera</string>
    <string name="upload_succeed">Yay! Your story has been uploaded.</string>
    <string name="upload_failed">No way! there was an error while uploading your story :(</string>
    <string name="register_succeed">Register succeed, please Log in to your account to continue</string>
    <string name="password_invalid">Password is invalid</string>
    <string name="email_invalid">Email format is invalid</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="permission_denied">Permission is denied</string>
    <string name="language">Language</string>
    <string name="title_activity_maps">Maps</string>
    <string name="view_on_map">View on Map</string>
    <string name="load_stories_failed">Failed while loading stories</string>
    <string name="add_current_location">Add current location?</string>
    <string name="failed_get_location">Failed to get location</string>
    <string name="image_preview">Image Preview</string>
</resources>