<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_add"
            android:title="@string/add_story"
            android:icon="@drawable/baseline_add_a_photo_24"
            app:showAsAction="collapseActionView|ifRoom"/>

        <item
            android:id="@+id/menu_map"
            android:title="@string/view_on_map"
            android:icon="@drawable/baseline_location_on_24"
            app:showAsAction="collapseActionView|ifRoom"/>

        <item
            android:id="@+id/menu_logout"
            android:title="@string/log_out"/>

        <item
            android:id="@+id/menu_language"
            android:title="@string/language"
            />
    </group>
</menu>