<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.LoginActivity">


    <com.example.yourstorymyapp.presentation.customView.EmailEditText
        android:id="@+id/edLoginEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:textColorHint="#A9A9A9"
        app:layout_constraintBottom_toTopOf="@+id/edLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/edLoginPassword"
        tools:ignore="TextContrastCheck" />


    <com.example.yourstorymyapp.presentation.customView.PasswordEditText
        android:id="@+id/edLoginPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:textColorHint="#A9A9A9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edLoginPassword" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/have_not_account"
        app:layout_constraintEnd_toStartOf="@+id/tvRegister"
        app:layout_constraintStart_toStartOf="@+id/edLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/register_here"
        android:textColor="#DD2C00"
        app:layout_constraintEnd_toEndOf="@+id/edLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:indeterminate="true"
        android:indeterminateTint="@color/DarkerOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>