<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            tools:context=".presentation.DetailStoryActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/list_item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/background_light"
                            app:layout_constraintBottom_toTopOf="@+id/iv_photo"
                            app:layout_constraintStart_toStartOf="@+id/tv_description"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/iv_photo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@tools:sample/avatars"
                            android:contentDescription="@string/image"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/background_light"
                            android:layout_marginStart="20dp"
                            android:text="@string/description"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/iv_photo" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_location"
                            android:layout_width="wrap_content"
                            android:textColor="@android:color/background_light"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/location"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_lat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/latitude"
                            android:textColor="@android:color/background_light"
                            app:layout_constraintStart_toEndOf="@+id/tv_location"
                            app:layout_constraintTop_toTopOf="@+id/tv_location" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_separator"
                            android:layout_width="wrap_content"
                            android:textColor="@android:color/background_light"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/separator"
                            app:layout_constraintStart_toEndOf="@+id/tv_lat"
                            app:layout_constraintTop_toTopOf="@+id/tv_location" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_lon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/background_light"
                            android:layout_marginStart="10dp"
                            android:text="@string/longitude"
                            app:layout_constraintStart_toEndOf="@+id/tv_separator"
                            app:layout_constraintTop_toTopOf="@+id/tv_location" />
                </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>