<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:id="@+id/list_item_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:transitionName="tsName"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/background_light"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/loading_indicator"
                    style="?android:attr/progressBarStyle"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/DarkerOrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:transitionName="tsImg"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/image" />

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="wrap_content"
                    android:transitionName="tsDesc"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/background_light"
                    android:text="@string/description"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>